# JujuBot_uC_A8

./: .gitignore  JRoboControl.atsln  JRoboCtrlBackup.7z  LICENSE  README.md
.github/workflows/: BuildAndTest.yml  _configureBuildAndTest.yml  buildTest.yml  test.yml
01_Calculations and Definitions/: Berechung Timer.xlsx  DotMatrix_1.xlsx  Message Definitions.xlsx
02_EA Modell/: HTML_Export.7z  JujuBot.EAP  NewProfiles.EAP  c_EmbeddedProfiles_ReadMes.txt  c_Profiles.xml  c_Profiles_MDG.xml
03_Implementation/: JujuBot_uC_A8 Backup_2022-01-23.7z
03_Implementation/JujuBot_uC_A8/: JujuBot_uC_A8.atsln
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/: CMakeLists.txt  JujuBot_uC_A8.cproj  _build.bat  _buildTest.bat  _clearConfigureBuild.bat  _clearConfigureBuildTest.bat  _configureBuild.bat  _configureBuildTest.bat  _rmdir_C_.bat  _test.bat  build.bat  main.c  makeAndTest.bat
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/FCAL/Com/: ComRtr_RxTx.h  Com_Config.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/MCAL/Com/: SPI_Config.h  SPI_RxTx.h  UART_RxTx.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/SUFU/: _task100ms.c  _task1ms.c  _taskIdle.c  defines.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_FCAL/Com/: ComRtr_Config.h  Com_RxTx.h  Com_SM.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_MCAL/Com/: TWI_Config.h  TWI_RxTx.h  UART_Config.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_MCAL/Timer/: timerConfig.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_SUFU/: _task100ms.c  _task1ms.h  _taskIdle.h  auxiliaryFunctions.c  defines.h  watchdog.c  watchdog.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_TestAndSim/: CMakeLists.txt  UnitTests.cpp
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_TestAndSim/include/: _test_avr_interrupt.h  _test_avrio.h  _test_timerConfig.h
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/_TestAndSim/src/: _test_avr_interrupt.c  _test_timerConfig.c
03_Implementation/JujuBot_uC_A8/JujuBot_uC_A8/doc/: Doxyfile_html.in  Doxyfile_pdf.in
03_gtest/: Notes.txt  generateAndRunTest.bat  main.c
04_RS232 Terminal/: JRobo_MotionCheckS0S1.tmf  JRobo_ServoCtrl.tmf  JRobo_VeloCheckS0S1.tmf
21_Lernstoff/: Modernes Cpp.docx
Calculations and Definitions/: Berechung TWI _ I2C Bitraten.xlsx  DotMatrix_Template.xlsx  Geschwindigkeit fuer Servos.xlsx  Message Definitions.xlsx
EA Modell/: JujuBot.EAP
JRoboControl/: JRoboControl.cproj  _00_pca9685.c  _00_pca9685.h  _00_serial.c  _00_serial.h  _00_twiCtrlMaster.c  _00_twiCtrlMaster.h  _01_communicationCtrl.c  _01_communicationCtrl.h  _01_servoCtrl.c  _01_servoCtrl.h  _99_auxiliaryFunctions.c  _99_auxiliaryFunctions.h  _99_defines.h  _99_timerConfig.c  _99_timerConfig.h  _99_watchdog.c  _99_watchdog.h  _task100ms.c  _task100ms.h  _task10ms.h  _task1ms.c  _task1ms.h  _taskIdle.h  _test_avrio.h  _test_util_delay.h  main.c  old_commandInterpreter.h  old_task100ms.h
JRoboControl/00_DriverLayer/: pca9685.c  pca9685.h  serial.c  serial.h  timerConfig.c  timerConfig.h  twiCtrlMaster.c  twiCtrlMaster.h
JRoboControl/01_FunctionLayer/: communicationCtrl.c  communicationCtrl.h  servoCtrl.c  servoCtrl.h  servoDataCtrl.c  servoDataCtrl.h  servoMotionCtrl.c  servoMotionCtrl.h
JRoboControl/97_Obsolete/: old_task1000ms.h
JRoboControl/98_Test/: _test_avr_interrupt.c  _test_avr_interrupt.h
JRoboControl/99_CrossSectionalFunctionality/: _task100ms.c  _task100ms.h  _task10ms.c  _task10ms.h  _task1ms.c  _task1ms.h  _taskIdle.c  _taskIdle.h  auxiliaryFunctions.c  auxiliaryFunctions.h  defines.h
gtest/: CMakeLists.txt  Notes.txt  generateTestreport.bat
gtest/include/: functions.h
gtest/source/: functions.c
gtest/test/: hello_test.cpp
